--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -266,7 +266,7 @@
 <body>
     <div class="header">
         <div class="icons">
-            <a href="scenario_page.html">
+            <a href="javascript:history.back()">
                 <img src="page_photo/back.png" alt="Back">
             </a>
             <div class="level-indicator">Easy</div>
